<resources>
    <string name="app_name">PracticaT71_Hilos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nuevo_hilo">Ejecutar Hilo</string>
    <string name="nuevo_asynctask">Ejecutar AsyncTask</string>
    <string name="progreso">Progreso Tarea</string>
    <string name="sin_hilos">Ejecución Sin Hilos</string>
    <string name="asynctask_dialog">AsyncTask + ProgressDialog</string>
    <string name="cancelar">Cancelar</string>
    <string name="comprobar">Responde?</string>
    <string name="url">url: </string>

</resources>
